# orgsim

./: .gitignore  justfile  main.py  orgsim.code-workspace  pyproject.toml
initiatives/v1/: main.ipynb  main.py  pyproject.toml
notes/: 20250316.md
notes/20250310/: 20250310.md
notes/20250311/: 20250311.md
notes/20250312/: 20250312-01.md  20250312-02.md  20250312-03.ipynb  20250312-04.ipynb
notes/20250312/constant-selfishness/: metrics.json  seed.json
notes/20250312/example/: seed.json
notes/20250312/strategic-selfishness/: metrics.json  seed.json
notes/20250313/: 20250313-01.ipynb
notes/20250314/: 20250314-01.ipynb
notes/20250315/: 20250315-01.ipynb  20250315-01.md
orgsim/: __init__.py  common.py  explore.py  main.py  person.py  reward_distribution.py  world.py
orgsim/explore/: base.py  world.py
orgsim/framework/: __init__.py
orgsim/models/: __init__.py  metrics.py  person.py  recruitment.py
orgsim/world/: __init__.py
orgsim/world/v1/: __init__.py  explore.py
orgsim/world/v1/models/v1/: __init__.py
tests/models/: test_reward_distribution.py
