[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "types-seaborn>=0.13.2.20250111",
]
