[project]
name = "v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "numpy>=2.2.3",
    # "orgsim",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
]

[tool.uv.sources]
# orgsim = { git = "https://github.com/stealthmate/orgsim", subdirectory = "packages/orgsim", rev = "orgsim-v1.0" }
